# plotter-tracer

./: .gitignore  Cargo.toml  README.md  analyser.py  ccli.py  cli.py  configuration.py  gcoding.py  logger.py  longstroke.py  main.py  navigating.py  navigation_types.py  operations.py  plopping.py  prof.json  requirements.txt  setup.py  snek.gcode  trace.py  visualiser.py
data/: manual.gcode
examples/: .gitignore
examples/piwo/: latest_log.txt
examples/piwo/data/: output.gcode
examples/piwo/logs/: 06.04.2024 15-43-16.txt
examples/snek/data/: output.gcode
examples/snek/logs/: 06.04.2024 15-41-22.txt
python/src/: ccli.py  gcoding.py  longstroke.py  main.py  navigating.py  plopping.py
src/: analyser.py  common.rs  configuration.py  gcode.rs  gcoding.py  image_prep.rs  machining_context.rs  main.rs  navigation_types.py  operations.py  params.rs  trace.py  visualiser.py  workpoints.rs
src/workpath/: horizontal.rs  mod.rs  vertical.rs
