[package]
name = "plotter-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
getset = "0.1.2"
image = "0.25.1"
imageproc = "0.24.0"
log = "0.4.21"
nalgebra = "0.32.5"
structopt = "0.3.26"
